update outpoint type
