# pkg/server2/internal/ports/request_sync_response_handler.go
@@ -68,8 +68,8 @@ func NewRequestSyncResponseSuccessResponse(response *app.RequestSyncResponseDTO)
 	utxos := make([]openapi.UTXOItem, 0, len(response.UTXOList))
 	for _, utxo := range response.UTXOList {
 		utxos = append(utxos, openapi.UTXOItem{
-			Txid: utxo.TxID,
-			Vout: int(utxo.OutputIndex),
+			Txid:        utxo.TxID,
+			OutputIndex: int(utxo.OutputIndex),
 		})
 	}
 
